--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "server:dev": "nodemon --exec babel-node ./server/index.js"
   },
   "keywords": [
     "pdf",
@@ -20,6 +21,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@dieyne/react-images-uploader": "^1.0.2",
+    "@dropzone-ui/react": "^5.5.6",
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
     "blob": "^0.1.0",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "css-loader": "^6.5.0",
     "mini-css-extract-plugin": "^2.4.3",
+    "nodemon": "^2.0.15",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
