--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "author": "sam",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.15.8",
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
@@ -54,6 +53,8 @@
     "xlsx": "^0.17.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/node": "^7.16.8",
     "css-loader": "^6.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "nodemon": "^2.0.15",
